CSS: Fix IE div clear extra space

--- a/src/Citra/Theme/Oriclone/Resources/public/css/dev/layout.css
+++ b/src/Citra/Theme/Oriclone/Resources/public/css/dev/layout.css
@@ -1,7 +1,11 @@
 /*
 http://www.barelyfitz.com/screencast/html-training/css/positioning/
 */
-.clr { clear: both; }
+.clr {
+    clear: both;
+    height: 1px;
+    overflow: hidden;
+}
 
 html {
     height: 100%;
